--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   </head>
   <body>
     <div id="container">
-      <button id="lutar">lutar</button>
+      <button id="lutart">Lutar com Thor</button>
+      <button id="lutari">Lutar com IronMan</button>
     </div>
     <script src="bundle.js"></script>
   </body>
